# CodeForOpenGL

OpenGLforStudy/: CMakeLists.txt
OpenGLforStudy/OpenGLforStudy/: CMakeLists.txt  glad.c  main.cpp  mainExp.cpp
OpenGLforStudy/OpenGLforStudy/application/: CMakeLists.txt  application.cpp  application.h
OpenGLforStudy/OpenGLforStudy/wrapper/: CMakeLists.txt  OpenGLforStudy.h  errorCheck.cpp  errorCheck.h  fun1.cpp
